; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitmath.c_FLAC__bitmath_silog2.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_bitmath.c_FLAC__bitmath_silog2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FLAC__bitmath_silog2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 2, i32* %2, align 4
  br label %25

11:                                               ; preds = %7
  %12 = load i32, i32* %3, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  %17 = sub nsw i32 0, %16
  br label %20

18:                                               ; preds = %11
  %19 = load i32, i32* %3, align 4
  br label %20

20:                                               ; preds = %18, %14
  %21 = phi i32 [ %17, %14 ], [ %19, %18 ]
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @FLAC__bitmath_ilog2_wide(i32 %22)
  %24 = add nsw i32 %23, 2
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %20, %10, %6
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @FLAC__bitmath_ilog2_wide(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
